Fix demo button padding on mobile resolutions.

--- a/app/pages/home/Home.scss
+++ b/app/pages/home/Home.scss
@@ -195,6 +195,10 @@ gelato-page[data-name='home'] {
     margin-top: 0px;
   }
 
+  .push-bottom-40 {
+    margin-bottom: 40px;
+  }
+
   @media (max-width: 768px) {
     .motto-text {
       text-shadow: 2px 2px 4px #151515;
